tests/samples/positive/control_flow/for_range_value.ax
module for_range_value;

fn sum_forward() -> i32 {
    let values = range(1, 5);
    var total: i32 = 0;
    for value in values {
        total += value;
    }
    return total;
}

fn sum_reverse() -> i32 {
    let values = range(5, 1, -2);
    var total: i32 = 0;
    for value in values {
        total += value;
    }
    return total;
}

fn sum_single_bound() -> i32 {
    let values = range(4);
    var total: i32 = 0;
    for value in values {
        total += value;
    }
    return total;
}

fn sum_typed_bounds(end: i64) -> i64 {
    let values = range(-(1 + 1), end, 2);
    var total: i64 = 0;
    for value in values {
        total += value;
    }
    return total;
}

fn range_value_is_reusable() -> i32 {
    let values = range(0, 3);
    var total: i32 = 0;
    for value in values {
        total += value;
    }
    for value in values {
        total += value * 10;
    }
    return total;
}

fn main() -> i32 {
    if sum_forward() == 10 &&
        sum_reverse() == 8 &&
        sum_single_bound() == 6 &&
        sum_typed_bounds(5) == 4 &&
        range_value_is_reusable() == 33 {
        return 0;
    }
    return 1;
}
